index button label  coaching tracker

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <a class="tool-box" href="pw50_51_point_inspection_sheet.html">51-Point Inspection Sheet</a>
 <a class="tool-box" href="pw50_bearing_selector_upgrade_guide.html">Bearing Selector &amp; Upgrade Guide</a>
 <a class="tool-box" href="pw50_blueprint_log.html">Blueprint Log</a>
-<a class="tool-box" href="pw50_coaching_tracker.html">Rider Coaching Tracker</a>
+<a class="tool-box" href="pw50_coaching_tracker.html">Coaching Tracker</a>
 <a class="tool-box" href="pw50_reality_check.html">Build Reality Check</a>
 <a class="tool-box" href="pw50_vin_decoder.html">VIN Decoder</a>
 </div>
