batch fix clickable logo

--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -98,7 +98,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -110,7 +110,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">Piston Clearance &amp; Ring Gap Calculator</h2>
-
 <div class="tip">
       Enter your piston diameter to calculate your ideal <strong>ring end gap</strong> using Gordon Jennings’ tuning rule: 0.004" per inch of piston diameter. Applies to cast rings on a steel bore.
     </div>
