--- a/pw50_51_point_inspection_sheet.html
+++ b/pw50_51_point_inspection_sheet.html
@@ -92,7 +92,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
