--- a/pw50_bearing_selector_upgrade_guide.html
+++ b/pw50_bearing_selector_upgrade_guide.html
@@ -84,7 +84,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -96,7 +96,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Bearing Selector Upgrade Guide</h2>
-
 <p>Choose the section of the bike to view bearing information.</p>
 <select id="sectionSelector" onchange="showSection()">
 <option value="">-- Select Section --</option>
