--- a/pw50_between_motos_checklist.html
+++ b/pw50_between_motos_checklist.html
@@ -101,7 +101,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -112,7 +112,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Between Motos Checklist</h2>
-
 <p>This is your 20-minute refresh routine to keep the PW50 race-ready between motos or after heavy backyard thrashing. Don’t overthink it — just run down the list and trust the process.</p>
 <details class="section">
 <summary>Fast Wash Routine</summary>
