--- a/pw50_blueprint_log.html
+++ b/pw50_blueprint_log.html
@@ -96,7 +96,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -108,7 +108,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Blueprint Log</h2>
-
 <div class="tip">
       Record your precision engine specs here. Rear-to-front order. PW50-specific. Tuned by Factory51.
     </div>
