--- a/pw50_cdi_timing_calculator.html
+++ b/pw50_cdi_timing_calculator.html
@@ -104,7 +104,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -116,7 +116,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 CDI Timing Calculator</h2>
-
 <p>Convert your dial gauge reading in millimeters into degrees BTDC. Useful for timing aftermarket CDI stators by measuring piston position before Top Dead Center (TDC).</p>
 <label for="stroke">Crankshaft Stroke (mm)</label>
 <select id="stroke">
