--- a/pw50_coaching_tracker.html
+++ b/pw50_coaching_tracker.html
@@ -98,7 +98,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -109,7 +109,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Coaching Tracker</h2>
-
 <p>Use this coaching tool during practice or race day to log lap times, record visual/riding cues, and monitor rider performance. Saved data is stored in your browser and can be exported or visualized anytime.</p>
 <ul>
 <li><strong>Lap Time Logger:</strong> Enter a time and notes each lap. It auto-saves, graphs laps, and tracks progress.</li>
