--- a/pw50_jet_calculator.html
+++ b/pw50_jet_calculator.html
@@ -140,7 +140,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -152,7 +152,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Jet Calculator</h2>
-
 <div class="tip">
 <strong>🏁 Factory51 Jetting Mode (Optional)</strong><br/>
       Use standard jets like <code>#65</code>, <code>#67.5</code>, <code>#70</code>, <code>#72.5</code> — or enable precision values like <code>#68.25</code> using Factory51 mode.
