--- a/pw50_pre_race_checklist.html
+++ b/pw50_pre_race_checklist.html
@@ -77,7 +77,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
@@ -90,7 +90,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">Pw50 Pre Race Checklist</h2>
-
 <div class="tip">
     It’s not the time to be chasing bolts, second-guessing jetting, or peeling stickers off plastics. The difference between a pro-level pit and a garage-sale panic station? Prep. This checklist covers the final 24 hours before the gate drops — what to check, what to log, and what to repeat every time.
   </div>
