--- a/pw50_tool_scout.html
+++ b/pw50_tool_scout.html
@@ -85,7 +85,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
@@ -98,7 +98,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">Pw50 Tool Scout Final Wrapped</h2>
-
 <p>Follow this system before every moto. Calm rider. Prepped bike. Focused pit.</p>
 <h2>🧰 Bike Prep</h2>
 <label><input type="checkbox"/> Fuel topped and on correct mix?</label>
