--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1>MasterTune Moto Suite</h1>
 </div>
 <select class="bike-selector">
