--- a/pw50_compression_analyzer.html
+++ b/pw50_compression_analyzer.html
@@ -94,7 +94,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -106,7 +106,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Compression Analyzer</h2>
-
 <p>Enter your compression test reading (PSI) below. Be sure to hold the throttle wide open and use a quality gauge for accuracy.</p>
 <label for="useType">Select Use Type</label>
 <select id="useType">
