--- a/pw50_port_timing_visualizer.html
+++ b/pw50_port_timing_visualizer.html
@@ -101,7 +101,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <select class="bike-selector">
@@ -113,7 +113,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">PW50 Port Timing Visualizer</h2>
-
 <label for="ex">Exhaust Duration (degrees)</label>
 <input id="ex" placeholder="e.g. 175" step="1" type="number"/>
 <label for="trans">Transfer Duration (degrees)</label>
