--- a/pw50_reality_check.html
+++ b/pw50_reality_check.html
@@ -74,7 +74,7 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
@@ -88,7 +88,6 @@ header h1 a { text-decoration: none; color: inherit; }
 </header>
 <div class="tool-container">
 <h2 class="tool-name">Pw50 Reality Check</h2>
-
 <p>Think you're ready for a full PW50 race build? Take this quick quiz and find out.</p>
 <div class="question">
 <label for="tools">Do you have the right tools (torque wrench, bearing press, piston stop)?</label>
