--- a/pw50_routine_maintenance_tool.html
+++ b/pw50_routine_maintenance_tool.html
@@ -98,7 +98,7 @@ header h1 a { text-decoration: none; color: inherit; }
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<a href="index.html"><img alt="MasterTune Logo" src="images/mastertune-logo.png"/></a>
 <h1><a href="index.html">MasterTune Moto Suite</a></h1>
 </div>
 <div>
